// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryCard Component should handle multiple display states, error, pending, fulfilled: error 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardHeader
      aria-hidden={true}
      className="hidden"
    >
      <CardActions>
        <Toolbar
          collapseListedFiltersBreakpoint="sm"
        >
          <ToolbarContent
            isExpanded={false}
            showClearFiltersButton={false}
          >
            <ForwardRef
              alignment={
                {
                  "default": "alignRight",
                }
              }
              aria-hidden={true}
              className="transparent"
            >
              <Pagination
                dropDirection="down"
                isCompact={true}
                isDisabled={true}
                itemCount={0}
                offset={0}
                onPage={[Function]}
                onPerPage={[Function]}
                perPage={10}
                variant={null}
              />
            </ForwardRef>
          </ToolbarContent>
        </Toolbar>
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardBody>
      <div
        className="blur"
      >
        <Table
          ariaLabel={null}
          className="curiosity-inventory-list"
          columnHeaders={[]}
          componentClassNames={
            {
              "table": "curiosity-table",
              "td": "curiosity-table__td",
              "tdAction": "curiosity-table__td-action",
              "tdExpand": "curiosity-table__td-expand",
              "tdExpanded": "curiosity-table__td-expand-expanded",
              "tdExpandedContent": "curiosity-table__td-expand-content",
              "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
              "tdSelect": "curiosity-table__td-select",
              "th": "curiosity-table__th",
              "tr": "curiosity-table__tr",
              "trExpand": "curiosity-table__tr-expand",
              "trExpanded": "curiosity-table__tr-expand-expanded",
              "trExpandedContent": "curiosity-table__tr-expand-content",
            }
          }
          isBorders={true}
          isHeader={true}
          isStriped={false}
          onExpand={null}
          onSelect={null}
          onSort={null}
          rows={[]}
          summary={null}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardFooter
      aria-hidden={true}
      className="hidden"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={true}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should handle multiple display states, error, pending, fulfilled: fulfilled 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardHeader
      aria-hidden={false}
      className=""
    >
      <CardActions>
        <Toolbar
          collapseListedFiltersBreakpoint="sm"
        >
          <ToolbarContent
            isExpanded={false}
            showClearFiltersButton={false}
          >
            <ForwardRef
              alignment={
                {
                  "default": "alignRight",
                }
              }
              aria-hidden={true}
              className="transparent"
            >
              <Pagination
                dropDirection="down"
                isCompact={true}
                isDisabled={false}
                itemCount={0}
                offset={0}
                onPage={[Function]}
                onPerPage={[Function]}
                perPage={10}
                variant={null}
              />
            </ForwardRef>
          </ToolbarContent>
        </Toolbar>
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardBody>
      <div
        className=""
      >
        <Table
          ariaLabel={null}
          className="curiosity-inventory-list"
          columnHeaders={[]}
          componentClassNames={
            {
              "table": "curiosity-table",
              "td": "curiosity-table__td",
              "tdAction": "curiosity-table__td-action",
              "tdExpand": "curiosity-table__td-expand",
              "tdExpanded": "curiosity-table__td-expand-expanded",
              "tdExpandedContent": "curiosity-table__td-expand-content",
              "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
              "tdSelect": "curiosity-table__td-select",
              "th": "curiosity-table__th",
              "tr": "curiosity-table__tr",
              "trExpand": "curiosity-table__tr-expand",
              "trExpanded": "curiosity-table__tr-expand-expanded",
              "trExpandedContent": "curiosity-table__tr-expand-content",
            }
          }
          isBorders={true}
          isHeader={true}
          isStriped={false}
          onExpand={null}
          onSelect={null}
          onSort={null}
          rows={[]}
          summary={null}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardFooter
      aria-hidden={true}
      className="transparent"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={false}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should handle multiple display states, error, pending, fulfilled: pending 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardHeader
      aria-hidden={false}
      className=""
    >
      <CardActions>
        <Toolbar
          collapseListedFiltersBreakpoint="sm"
        >
          <ToolbarContent
            isExpanded={false}
            showClearFiltersButton={false}
          >
            <ForwardRef
              alignment={
                {
                  "default": "alignRight",
                }
              }
              aria-hidden={true}
              className="transparent"
            >
              <Pagination
                dropDirection="down"
                isCompact={true}
                isDisabled={true}
                itemCount={0}
                offset={0}
                onPage={[Function]}
                onPerPage={[Function]}
                perPage={10}
                variant={null}
              />
            </ForwardRef>
          </ToolbarContent>
        </Toolbar>
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Loader
          skeletonProps={
            {
              "size": "sm",
            }
          }
          tableProps={
            {
              "className": "curiosity-inventory-list",
              "colCount": 1,
              "colWidth": [],
              "isHeader": true,
              "rowCount": undefined,
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardFooter
      aria-hidden={true}
      className="transparent"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={true}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should render a basic component: basic render 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardHeader
      aria-hidden={false}
      className=""
    >
      <CardActions>
        <Toolbar
          collapseListedFiltersBreakpoint="sm"
        >
          <ToolbarContent
            isExpanded={false}
            showClearFiltersButton={false}
          >
            <ForwardRef
              alignment={
                {
                  "default": "alignRight",
                }
              }
              aria-hidden={true}
              className="transparent"
            >
              <Pagination
                dropDirection="down"
                isCompact={true}
                isDisabled={true}
                itemCount={0}
                offset={0}
                onPage={[Function]}
                onPerPage={[Function]}
                perPage={10}
                variant={null}
              />
            </ForwardRef>
          </ToolbarContent>
        </Toolbar>
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Loader
          skeletonProps={
            {
              "size": "sm",
            }
          }
          tableProps={
            {
              "className": "curiosity-inventory-list",
              "colCount": 1,
              "colWidth": [],
              "isHeader": true,
              "rowCount": undefined,
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardFooter
      aria-hidden={true}
      className="transparent"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={true}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should return an empty render when disabled: disabled 1`] = `
<Card
  className="curiosity-inventory-card__disabled"
>
  <CardBody>
    <Bullseye>
      t(curiosity-inventory.tab, {"context":"disabled"})
    </Bullseye>
  </CardBody>
</Card>
`;

exports[`InventoryCard Component should return an empty render when disabled: missing filters 1`] = `
<Card
  className="curiosity-inventory-card__disabled"
>
  <CardBody>
    <Bullseye>
      t(curiosity-inventory.tab, {"context":"disabled"})
    </Bullseye>
  </CardBody>
</Card>
`;
